fix: cards break layout on mobile screens
We can add horizontal scroll, but we don't have that much information and it's easier to shrink cards

--- a/astro-version/src/styles/common.css
+++ b/astro-version/src/styles/common.css
@@ -4,6 +4,8 @@
   --space-s: 16;
   --space-m: 24;
   --space-l: 48;
+
+  --card-width: minmax(min(100%, 360px), 1fr);
 }
 
 *,
